WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48154
Layout not updating in a subtree when a scrollbar is hidden in a flexbox descendant
https://bugs.webkit.org/show_bug.cgi?id=48154
Summary
Layout not updating in a subtree when a scrollbar is hidden in a flexbox desc...
mitz
Reported
2010-10-22 14:39:48 PDT
Patch forthcoming
Attachments
Handle hidden scrollbars
(5.22 KB, patch)
2010-10-22 14:59 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-10-22 14:40:28 PDT
<
rdar://problem/8251616
>
mitz
Comment 2
2010-10-22 14:59:20 PDT
Created
attachment 71600
[details]
Handle hidden scrollbars
Eric Seidel (no email)
Comment 3
2010-11-10 14:14:57 PST
Attachment 71600
[details]
was posted by a committer and has review+, assigning to Dan Bernstein for commit.
mitz
Comment 4
2010-11-10 14:16:02 PST
Committed
r70354
.
http://trac.webkit.org/changeset/70354
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug